--- a/admin/config.yml
+++ b/admin/config.yml
@@ -138,6 +138,7 @@ collections:
           - label: "History Title Slide"
             name: "historyTitleSlide"
             widget: "object"
+            fields:
               - label: "Title"
                 name: "title"
                 widget: "string"
@@ -722,6 +723,60 @@ collections:
             name: "sponsorBar"
             widget: "boolean"
             hint: "Turn on to include list of sponsors at bottom of page above footer."
+  - label: "Post - News"
+    name: "news"
+    folder: "_posts/news"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - label: "Layout"
+        name: "layout"
+        widget: "hidden"
+        default: "news-article"
+      - label: "Category"
+        name: "category"
+        widget: "hidden"
+        default: "news"
+      - label: "Title"
+        name: "title"
+        widget: "string"
+      - label: "Preview Text"
+        name: "meta"
+        widget: "string"
+        hint: "Description or first line of article. Max characters: 100"
+      - label: "Image"
+        name: "prevImage"
+        widget: "image"
+      - label: "Article Content"
+        name: "body"
+        widget: "markdown"
+  - label: "Post - Events"
+    name: "events"
+    folder: "_posts/events"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - label: "Layout"
+        name: "layout"
+        widget: "hidden"
+        default: "news-article"
+      - label: "Category"
+        name: "category"
+        widget: "hidden"
+        default: "news"
+      - label: "Title"
+        name: "title"
+        widget: "string"
+      - label: "Preview Text"
+        name: "meta"
+        widget: "string"
+        hint: "Description or first line of article. Max characters: 100"
+      - label: "Image"
+        name: "prevImage"
+        widget: "image"
+      - label: "Article Content"
+        name: "body"
+        widget: "markdown"
   - name: "contact-information"
     label: "Contact Information"
     files:
