Add event details and data

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -745,7 +745,7 @@ collections:
         widget: "string"
         hint: "Description or first line of article. Max characters: 100"
       - label: "Image"
-        name: "prevImage"
+        name: "banImage"
         widget: "image"
       - label: "Article Content"
         name: "body"
@@ -763,7 +763,7 @@ collections:
       - label: "Category"
         name: "category"
         widget: "hidden"
-        default: "news"
+        default: "events"
       - label: "Title"
         name: "title"
         widget: "string"
@@ -771,8 +771,20 @@ collections:
         name: "meta"
         widget: "string"
         hint: "Description or first line of article. Max characters: 100"
+      - label: "Date"
+        name: "eventDate"
+        widget: "string"
+      - label: "Time"
+        name: "eventTime"
+        widget: "string"
+      - label: "Location"
+        name: "eventLocation"
+        widget: "string"
+      - label: "Location Map Link"
+        name: "eventLocationLink"
+        widget: "string"
       - label: "Image"
-        name: "prevImage"
+        name: "banImage"
         widget: "image"
       - label: "Article Content"
         name: "body"
