Update Pages “about”

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -242,9 +242,9 @@ what-we-give:
   donationsTitle: 2017 Donations
 board:
   boardAbout: >-
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae
-    rutrum eros, ac elementum nisl. Morbi ut rhoncus nisi. Phasellus aliquam
-    nulla id placerat porta.
+    The Hub's success would not be possible without the dedication and work of
+    the board of directors. They have donated countless hours and skill to help
+    shape our success. 
   boardMembers:
     - member: Eloise Caverson
       position: President
