Add meta SEO content

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -1,4 +1,5 @@
 title: About
+metaDesc: Learn about The Hub's extensive history and details about The Hub's services and donations.
 h1Text: About The Hub & Rebound
 bylineText: >-
   The Hub & Rebound have a rich history serving the community. Learn how
