--- a/_data/pages/donate.yml
+++ b/_data/pages/donate.yml
@@ -1,4 +1,5 @@
 title: Donate
+metaDesc: Help support The Hub and give back to the community!
 bylineText: >-
   The Hub & Rebound rely on the generous support of the community to continue operation. Thank you for your generosity and taking the time to donate to The Hub.
 h1Text: Donate
