--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -1,4 +1,5 @@
 title: Home
+metaDesc: A fixture in the Almonte community since 1974, The Hub is a not-for-profit store that raises money to benefit their community.
 h1Text: Giving back to the community since 1974.
 bylineText: >-
   The Hub’s goal has always been to service the greater Almonte community and be
