--- a/_data/pages/news-events.yml
+++ b/_data/pages/news-events.yml
@@ -1,4 +1,5 @@
 title: News & Events
+metaDesc: Learn about The Hub's recent news and upcomming events!
 h1Text: News & Events
 hero: false
 banner:
