--- a/_data/pages/volunteer.yml
+++ b/_data/pages/volunteer.yml
@@ -1,4 +1,5 @@
 title: Volunteer
+metaDesc: Help us give back to the community by volunteering with The Hub!
 h1Text: Help us give back to the community!
 bylineText: >-
   Hub & Rebound’s volunteers play an integral role in every aspect of the
