--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -1,6 +1,7 @@
-- label: "YouTube"
-  link: "https://www.youtube.com/channel/UCL5Uk95Y8NyZxzHIh1031-w"
-  iconRef: "youtube"
-- label: "Facebook"
-  link: "https://www.facebook.com/TheHubAlmonte/"
-  iconRef: "facebook"
+social-media:
+  - label: "YouTube"
+    link: "https://www.youtube.com/channel/UCL5Uk95Y8NyZxzHIh1031-w"
+    iconRef: "youtube"
+  - label: "Facebook"
+    link: "https://www.facebook.com/TheHubAlmonte/"
+    iconRef: "facebook"
