--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,6 +19,10 @@ collections:
           - label: "Page Title"
             name: "title"
             widget: "hidden"
+          - label: "SEO Page Description"
+            name: "metaDesc"
+            widget: "string"
+            hint: "This description is for Search Engine Optimization. It will not be visible on the web page but helps describe the page to search engines like Google."
           - label: "Page Headline"
             name: "h1Text"
             widget: "string"
@@ -99,6 +103,10 @@ collections:
           - label: "Page Title"
             name: "title"
             widget: "hidden"
+          - label: "SEO Page Description"
+            name: "metaDesc"
+            widget: "string"
+            hint: "This description is for Search Engine Optimization. It will not be visible on the web page but helps describe the page to search engines like Google."
           - label: "Page Headline"
             name: "h1Text"
             widget: "string"
@@ -267,6 +275,10 @@ collections:
           - label: "Page Title"
             name: "title"
             widget: "hidden"
+          - label: "SEO Page Description"
+            name: "metaDesc"
+            widget: "string"
+            hint: "This description is for Search Engine Optimization. It will not be visible on the web page but helps describe the page to search engines like Google."
           - label: "Page Headline"
             name: "h1Text"
             widget: "string"
@@ -633,6 +645,10 @@ collections:
           - label: "Page Title"
             name: "title"
             widget: "hidden"
+          - label: "SEO Page Description"
+            name: "metaDesc"
+            widget: "string"
+            hint: "This description is for Search Engine Optimization. It will not be visible on the web page but helps describe the page to search engines like Google."
           - label: "Page Headline"
             name: "h1Text"
             widget: "string"
@@ -680,6 +696,10 @@ collections:
           - label: "Page Title"
             name: "title"
             widget: "hidden"
+          - label: "SEO Page Description"
+            name: "metaDesc"
+            widget: "string"
+            hint: "This description is for Search Engine Optimization. It will not be visible on the web page but helps describe the page to search engines like Google."
           - label: "Page Headline"
             name: "h1Text"
             widget: "string"
@@ -950,3 +970,35 @@ collections:
                 name: "logoAlt"
                 widget: "string"
                 hint: "Short description saying who the logo belongs to for accessibility."
+  - name: "social-media"
+    label: "Social Media List"
+    files:
+      - label: "Social Media List"
+        name: "social-media"
+        file: "_data/sponsor-list.yml"
+        fields:
+          - label: "Social Media List"
+            name: "social-media"
+            widget: "list"
+            fields:
+              - label: "Icon Label"
+                name: "label"
+                widget: "string"
+              - label: "Icon"
+                name: "iconRef"
+                widget: "select"
+                options:
+                  - { label: "Facebook", value: "facebook" }
+                  - { label: "Home", value: "home" }
+                  - { label: "Instagram", value: "instagram" }
+                  - { label: "LinkedIn", value: "linked-in" }
+                  - { label: "Location", value: "location" }
+                  - { label: "Phone", value: "phone" }
+                  - { label: "Share", value: "share" }
+                  - { label: "Snapchat", value: "snapchat" }
+                  - { label: "Twitter", value: "twitter" }
+                  - { label: "Website", value: "website" }
+                  - { label: "Youtube", value: "youtube" }
+              - label: "Link"
+                name: "link"
+                widget: "string"
