--- a/_data/sponsor-list.yml
+++ b/_data/sponsor-list.yml
@@ -1,7 +1,10 @@
-social-media:
-  - iconRef: youtube
-    label: YouTube
-    link: 'https://www.youtube.com/channel/UCL5Uk95Y8NyZxzHIh1031-w'
-  - iconRef: facebook
-    label: Facebook
-    link: 'https://www.facebook.com/TheHubAlmonte/'
+sponsors:
+  - title: 'Algonquin College'
+    logo: ac-logo.jpg
+    logoAlt:
+  - title: 'Government of Canada'
+    logo: gc-logo.png
+    logoAlt:
+  - title: 'Government of Ontario'
+    logo: ontario-logo.jpg
+    logoAlt:
