Update contact info in CMS

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -839,44 +839,23 @@ collections:
           - label: "Email"
             name: "email"
             widget: "string"
-          - label: "The Hub Contact Info"
-            name: "hubContact"
-            widget: "object"
-            fields:
-            - label: "Telephone Number Data (No spaces or dashes)"
-              name: "tel"
-              widget: "string"
-            - label: "Telephone Number Display"
-              name: "telDisplay"
-              widget: "string"
-            - label: "Address Line 1"
-              name: "addressLine1"
-              widget: "string"
-            - label: "Address Line 2"
-              name: "addressLine2"
-              widget: "string"
-            - label: "Map Link"
-              name: "mapLink"
-              widget: "string"
-          - label: "Rebound Contact Info"
-            name: "reboundContact"
-            widget: "object"
-            fields:
-            - label: "Telephone Number Data (No spaces or dashes)"
-              name: "tel"
-              widget: "string"
-            - label: "Telephone Number Display"
-              name: "telDisplay"
-              widget: "string"
-            - label: "Address Line 1"
-              name: "addressLine1"
-              widget: "string"
-            - label: "Address Line 2"
-              name: "addressLine2"
-              widget: "string"
-            - label: "Map Link"
-              name: "mapLink"
-              widget: "string"
+          - label: "Telephone Number Display"
+            name: "telDisplay"
+            widget: "string"
+            hint: "This version is for the user to view. Write in easily readable way. Ex: (613) 256-5225"
+          - label: "Telephone Number Data"
+            name: "tel"
+            widget: "string"
+            hint: "This version is for the browser link. No spaces or dashes. Ex: +16132565225"
+          - label: "Address Line 1"
+            name: "addressLine1"
+            widget: "string"
+          - label: "Address Line 2"
+            name: "addressLine2"
+            widget: "string"
+          - label: "Map Link"
+            name: "mapLink"
+            widget: "string"
   - name: "hours"
     label: "Store Hours"
     files:
